# SBG-TIR-L4-JET

./: .gitignore  Dockerfile  README.md  SBGv001_L4T_JET.py  SBGv001_L4T_JET_runconfig.yaml  example_L4T_JET_run_with_download.py  makefile  pyproject.toml
.github/workflows/: ci.yml
Documentation/: SBG-TIR Ecosystem Data Products User Guide V1.docx  SBG_L3_ET_ATBD_V1_20240423.docx  SBG_L3_JET_ATBD_V1.docx
SBG_TIR_L4_JET/: ECOv002_L3T_L4T_JET.py  ECOv003_L3T_L4T_JET.py  L3TL4TJETConfig.py  L3T_L4T_JET.xml  NDVI_to_FVC.py  PGEVersion.py  SBG_TIR_L4_JET.py  SBG_TIR_L4_JET.xml  __init__.py  constants.py  downscale_air_temperature.py  downscale_relative_humidity.py  downscale_soil_moisture.py  downscale_vapor_pressure_deficit.py  exit_codes.py  generate_L3T_L4T_JET_runconfig.py  runconfig.py  version.py  write_L3T_JET.py  write_L3T_MET.py  write_L3T_SEB.py  write_L3T_SM.py  write_L4T_ESI.py  write_L4T_WUE.py
SBG_TIR_L4_JET/BESS/: BESS.py  __init__.py  alf.tif  b0_C3.tif  c4_percent_1d_f32.tif  kn.tif  m_C3.tif  m_C4.tif  peakVCmax_C3.tif  peakVCmax_C4.tif
SBG_TIR_L4_JET/FLiES/: FLiES.py  FLiESANN.h5  FLiESANN_old.h5  FLiESLUT.nc  FLiESLUT.py  __init__.py  daylight_hours.py  solar_azimuth.py  solar_zenith_angle.py
SBG_TIR_L4_JET/LPDAAC/: LPDAACDataPool.py  __init__.py
SBG_TIR_L4_JET/MCD12/: MCD12C1.py
SBG_TIR_L4_JET/MOD16/: MOD16.py  __init__.py  mod16.csv
SBG_TIR_L4_JET/PTJPL/: PTJPL.py  __init__.py
SBG_TIR_L4_JET/PTJPLSM/: PTJPLSM.py  __init__.py
SBG_TIR_L4_JET/SRTM/: SRTM.py  __init__.py  filenames.csv
SBG_TIR_L4_JET/STIC/: STIC.py  __init__.py
SBG_TIR_L4_JET/downscaling/: __init__.py  downscaling.py  linear_downscale.py
SBG_TIR_L4_JET/model/: model.py
SBG_TIR_L4_JET/timer/: timer.py
tests/: test_import_ECOv003_L3T_L4T_JET.py  test_import_dependencies.py
