[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECOv002_L3T_L4T_JET"
version = "1.0.0"
description = "ECOSTRESS Collection 2 JPL Evapotranspiration (JET) Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "astropy",
    "colored_logging",
    "ECOv002-CMR",
    "ECOv002-granules",
    "FLiESANN",
    "gedi-canopy-height",
    "geopandas",
    "geos5fp",
    "h5py",
    "koppengeiger",
    "matplotlib",
    "MCD12C1-2019-v006",
    "modisci>=1.1.1",
    "msgpack",
    "msgpack_numpy",
    "netCDF4",
    "numpy",
    "pandas",
    "pillow",
    "pycksum",
    "pykdtree",
    "pyproj",
    "pyresample",
    "rasterio",
    "rasters",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "shapely",
    "six",
    "soil-capacity-wilting",
    "sun-angles",
    "tensorflow",
    "untangle",
    "xmltodict"
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]

[tool.setuptools.package-data]
ECOv002_L3T_L4T_JET = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv002-L3T-L4T-JET"

[tool.setuptools.packages.find]
include = ["ECOv002_L3T_L4T_JET"]
exclude = []
