[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SBG-TIR-L4-JET"
version = "1.0.0"
description = "SBG-TIR OTTER Collection 1 Ecosystems Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "astropy",
    "colored_logging",
    "ECOv002-CMR>=1.0.5",
    "ECOv002-granules>=1.0.3",
    "FLiESANN>=1.1.2",
    "gedi-canopy-height",
    "geopandas",
    "geos5fp>=1.0.4",
    "h5py",
    "koppengeiger>=1.0.4",
    "matplotlib",
    "MCD12C1-2019-v006",
    "modisci>=1.1.2",
    "msgpack",
    "msgpack_numpy",
    "netCDF4",
    "numpy",
    "pandas",
    "pillow",
    "pycksum",
    "pykdtree",
    "pyproj",
    "pyresample",
    "rasterio",
    "rasters>=1.4.6",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "sentinel-tiles>=1.0.2",
    "shapely",
    "six",
    "soil-capacity-wilting",
    "solar-apparent-time>=1.3.1",
    "sun-angles",
    "tensorflow",
    "untangle",
    "xmltodict"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
ECOv002_L3T_L4T_JET = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/sbg-tir/SBG-TIR-L4-JET"

[tool.setuptools.packages.find]
include = ["SBG_TIR_L4_JET"]
exclude = []
