[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SBG-TIR-L4-JET"
version = "1.0.0"
description = "SBG-TIR OTTER Collection 1 Ecosystems Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "BESS-JPL",
    "check-distribution",
    "colored-logging",
    "ECOv002-granules",
    "FLiESANN",
    "FLiESLUT",
    "GEOS5FP",
    "koppengeiger",
    "MCD12C1_2019_v006",
    "NASADEM>=1.2.0",
    "numpy",
    "pandas",
    "PM-JPL>=1.2.2",
    "PTJPLSM",
    "python-dateutil",
    "pytictoc",
    "rasters>=1.5.0",
    "scikit-learn",
    "STIC-JPL",
    "sun-angles",
    "untangle",
    "verma-net-radiation"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
SBG_TIR_L4_JET = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/sbg-tir/SBG-TIR-L4-JET"

[tool.setuptools.packages.find]
include = ["SBG_TIR_L4_JET"]
exclude = []
